modified:   clash.yaml 	new file:   clashmeta.yaml

--- a/clash.yaml
+++ b/clash.yaml
@@ -93,7 +93,7 @@ d: &d {type: http, behavior: domain, interval: 86400}
 i: &i {type: http, behavior: ipcidr, interval: 86400}
 
 proxy-providers:
-  Subscribe: {<<: *p, path: ./proxy-providers/Sub.yaml, url: ttps://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33}
+  Subscribe: {<<: *p, path: ./proxy-providers/Sub.yaml, url: https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33}
     # 在此将"http://your-service-provider"替换为你的机场订阅，推荐使用base64或者node list
     # Sub-Store生成的链接,可以直接替换上述url引号中的部分,具体见Sub-Store教程         
                
