--- a/anduo.yaml
+++ b/anduo.yaml
@@ -1,7 +1,7 @@
 # url 里填写自己的订阅,名称不能重复
 proxy-providers:
   Fac:
-    url: "https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc"
+    url: "https://fm-sub-mainpanel-vygijfogpm.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc"
     type: http
     interval: 86400
     health-check: {enable: true,url: "https://www.gstatic.com/generate_204", interval: 300}
@@ -199,7 +199,7 @@ rule-providers:
     url: "https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list"
   AI:
     <<: *domain
-    url: "hhttps://raw.githubusercontent.com/laivn/Hello-World/master/airule.list"
+    url: "https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list"
   github_domain:
     <<: *domain
     url: "https://raw.githubusercontent.com/laivn/Hello-World/master/ghrule.list"
