--- a/anduo.yaml
+++ b/anduo.yaml
@@ -215,6 +215,8 @@ rules:
   - RULE-SET,cn_ip,🇨🇳国内
   - RULE-SET,GFWList,🔃自动选择
   - MATCH,🔃自动选择
+  - GEOIP,LAN,DIRECT
+  - GEOIP,CN,DIRECT
 
 rule-anchor:
   ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
