modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -68,36 +68,18 @@ udp-priority = true
 # > 加密的DNS服务器 (如无必要不建议使用)
 # encrypted-dns-server = https://doh.pub/dns-query
 
+# [Proxy]
+# #!include 机场1托管.conf,机场2托管.conf,机场3托管.conf
+
 [Proxy Group]
 
-Proxy = select, 🚀, RecMata, SSP, FacMata
-
-🚀 = url-test, include-other-group="RecMata, SSP, FacMata", policy-regex-filter=(?i)(香港|HKG|日本|JPN|TWN|新加坡|SGP)
-
-🚧组合 = url-test, include-other-group="SSP, RecMata, FacMata"
-# 🚧组合 = url-test, include-other-group="SSP, RecMata, FacMata", policy-regex-filter=^((?!美国|US).)*$
-🇺🇸US = url-test, include-other-group="SSP, RecMata, FacMata", policy-regex-filter=(?i)(美国|US)
-🇭🇰HK = url-test, include-other-group="SSP, RecMata, FacMata", policy-regex-filter=(?i)(香港|HKG)
-🇯🇵JP = url-test, include-other-group="SSP, RecMata, FacMata", policy-regex-filter=(?i)(日本|JPN)
-
-FacMata🇭🇰HK = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, update-interval=43200, policy-regex-filter=(?i)(香港|HKG)
-RecMata🇭🇰HK = url-test, policy-path=https://url.409648.xyz/data/payload/getlink?token=1be9923712c8fe8beb75d5356a0aef48, update-interval=43200, policy-regex-filter=(?i)(香港|HKG)
-
-
-FacMata🇺🇸US = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, update-interval=43200, policy-regex-filter=(?i)(美国|US)
-RecMata🇺🇸US = url-test, policy-path=https://url.409648.xyz/data/payload/getlink?token=1be9923712c8fe8beb75d5356a0aef48, update-interval=43200, policy-regex-filter=(?i)(美国|US)
-SSP🇺🇸US = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, update-interval=43200, policy-regex-filter=(?i)(美国|US)
-
-
-FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, update-interval=43200, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$
-
-RecMata = url-test, policy-path=https://url.409648.xyz/data/payload/getlink?token=1be9923712c8fe8beb75d5356a0aef48, update-interval=43200, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费).)*$
-
-SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, update-interval=43200, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
+所有机场合集 = select,🌐SSP, 🚗FacMata, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0 
 
 🌐SSP = select, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, update-interval=43200, policy-regex-filter=(?i)(Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统)
+
 🚗FacMata = select, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, update-interval=43200, policy-regex-filter=(?i)(Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统)
-🏎️RecMata = url-test, policy-path=https://url.409648.xyz/data/payload/getlink?token=1be9923712c8fe8beb75d5356a0aef48, update-interval=43200, policy-regex-filter=(?i)(Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统)
+
+# 🏎️RecMata = url-test, policy-path=https://url.409648.xyz/data/payload/getlink?token=1be9923712c8fe8beb75d5356a0aef48, update-interval=43200, policy-regex-filter=(?i)(Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统)
 
 
 [Rule]
