--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -21,7 +21,7 @@ skip-proxy = localhost, *.local, injections.adguard.org, local.adguard.org, capt
 # wifi-access-socks5-port = 6153
 
 # > Allow Hotspot Access (热点分享代理）
-allow-hotspot-access = true
+# allow-hotspot-access = true
 
 # > 允许 Wi-Fi 访问 (仅 macOS，若允许远程访问将「127.0.0.1」改为「0.0.0.0」)
 # http-listen = 0.0.0.0:6152
@@ -32,7 +32,7 @@ allow-hotspot-access = true
 # network-framework = false
 
 # > 排除简单主机名
-exclude-simple-hostnames = true
+# exclude-simple-hostnames = true
 
 # > IPv6 支持
 ipv6 = true
