modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -38,7 +38,7 @@ skip-proxy = localhost, *.local, injections.adguard.org, local.adguard.org, capt
 ipv6 = true
 
 # > IPv6 VIF (默认禁用）
-ipv6-vif = auto
+# ipv6-vif = auto
 
 # > 测试超时（秒）
 test-timeout = 4
@@ -55,15 +55,15 @@ geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release
 # geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 
 # > GeoIP 数据库自动更新
-disable-geoip-db-auto-update = false
+# disable-geoip-db-auto-update = false
 
 # > Hybrid Network (建议关闭、无限流量或者超出套餐流量不限速可选择开启）
 # 对所有策略设置 hybrid = true，所有 TCP 连接在建立时均会并发尝试数据网络和 WiFi 连接。除此之外，所有 DNS 查询操作也都将并发在数据网络和 WiFi 上进行。所以若想体验该功能，请手动配置公网 DNS，暂不支持 DOH。请注意数据网络的套餐流量使用。
 # 混合网络，默认关闭。
-all-hybrid = true
+# all-hybrid = true
 
 # > 提高处理 UDP 流量优先级
-udp-priority = true
+# udp-priority = true
 
 # > 加密的DNS服务器 (如无必要不建议使用)
 # encrypted-dns-server = https://doh.pub/dns-query
