modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -90,7 +90,7 @@ localhost = 127.0.0.1
 # AutoTestGroup = url-test, ProxySOCKS5, ProxySOCKS5TLS, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
 
 # proxy group with a external proxies list url
-# ExternalGroup = select, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
+ExternalGroup = select, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
 # AutoExternalGroup = url-test, policy-path=https://test.com/nodes.txt
 
 # proxy group which contains all proxy under [Proxy] section
